--- a/package.json
+++ b/package.json
@@ -9,13 +9,22 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@reduxjs/toolkit": "^2.2.5",
+    "axios": "^1.7.2",
+    "classnames": "^2.5.1",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.24.0",
+    "sass": "^1.77.6",
+    "serve": "^14.2.3",
+    "path":"latest"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+    
   },
   "eslintConfig": {
     "extends": [
